classes refactored, tests enhanced